# roomclip-scraping

./: Dockerfile  docker-compose.yaml  httpd.conf
app/: main.py  requirements.txt
roomclip-scraping/: README.md  pyproject.toml
roomclip-scraping/app/: .env  __init__.py  main.cgi  models.py  routes.py
roomclip-scraping/app/static/: scripts.js
roomclip-scraping/app/templates/: index.html
